<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_light_background"
        tools:context=".RegistrationActivity">

        <TextView
            android:id="@+id/tv_heading"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:paddingTop="@dimen/dimen_8dp"
            android:text="@string/signup_heading"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/img_back"
            app:layout_constraintLeft_toRightOf="@+id/img_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"/>

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:background="@drawable/back_action_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <View
            android:id="@+id/divider_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:background="@color/colorAccent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_heading"/>


        <TextView
            android:id="@+id/tv_important"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:paddingStart="@dimen/dimen_15dp"
            android:paddingLeft="@dimen/dimen_15dp"
            android:paddingBottom="@dimen/dimen_5dp"
            android:text="All fields are mandatory"
            app:layout_constraintLeft_toLeftOf="@id/divider_1"
            app:layout_constraintRight_toRightOf="@id/divider_1"
            app:layout_constraintTop_toBottomOf="@id/divider_1"
            />


        <EditText
            android:id="@+id/edit_Firstname"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginLeft="@dimen/dimen_15dp"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:layout_marginRight="@dimen/dimen_15dp"
            android:backgroundTint="@color/colorAccent"
            android:drawablePadding="@dimen/dimen_5dp"
            android:hint="@string/tec_firstname"
            android:imeActionLabel=""
            android:imeOptions="actionNext"
            android:inputType="text"
            android:paddingEnd="@dimen/dimen_12dp"
            android:paddingRight="@dimen/dimen_12dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorPrimary"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintLeft_toLeftOf="@id/tv_important"
            app:layout_constraintRight_toRightOf="@id/tv_important"
            app:layout_constraintTop_toBottomOf="@id/tv_important"
            app:layout_constraintVertical_bias="1"
            />

        <EditText
            android:id="@+id/edit_Lastname"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:backgroundTint="@color/colorAccent"
            android:drawablePadding="@dimen/dimen_5dp"
            android:hint="@string/tec_lastname"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:paddingEnd="@dimen/dimen_12dp"
            android:paddingRight="@dimen/dimen_12dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorPrimary"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintLeft_toLeftOf="@id/edit_Firstname"
            app:layout_constraintRight_toRightOf="@id/edit_Firstname"
            app:layout_constraintTop_toBottomOf="@id/edit_Firstname"
            />

        <EditText
            android:id="@+id/edit_Emailid"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:backgroundTint="@color/colorAccent"
            android:drawablePadding="@dimen/dimen_5dp"
            android:hint="@string/tec_emailaddress"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingEnd="@dimen/dimen_12dp"
            android:paddingRight="@dimen/dimen_12dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorPrimary"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintLeft_toLeftOf="@id/edit_Lastname"
            app:layout_constraintRight_toRightOf="@id/edit_Lastname"
            app:layout_constraintTop_toBottomOf="@id/edit_Lastname"
            />

        <EditText
            android:id="@+id/edit_Phoneno"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:backgroundTint="@color/colorAccent"
            android:drawablePadding="@dimen/dimen_5dp"
            android:hint="@string/tec_phonenumber"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="10"
            android:paddingEnd="@dimen/dimen_12dp"
            android:paddingRight="@dimen/dimen_12dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorPrimary"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintLeft_toLeftOf="@id/edit_Emailid"
            app:layout_constraintRight_toRightOf="@id/edit_Emailid"
            app:layout_constraintTop_toBottomOf="@id/edit_Emailid"
            />

        <EditText
            android:id="@+id/edit_Address"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:backgroundTint="@color/colorAccent"
            android:drawablePadding="@dimen/dimen_5dp"
            android:hint="@string/tec_address"
            android:imeOptions="actionNext"
            android:inputType="textPostalAddress"
            android:maxLength="50"
            android:paddingEnd="@dimen/dimen_12dp"
            android:paddingRight="@dimen/dimen_12dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorPrimary"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintLeft_toLeftOf="@id/edit_Phoneno"
            app:layout_constraintRight_toRightOf="@id/edit_Phoneno"
            app:layout_constraintTop_toBottomOf="@id/edit_Phoneno"
            />

        <EditText
            android:id="@+id/edit_Pincode"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:backgroundTint="@color/colorAccent"
            android:drawablePadding="@dimen/dimen_5dp"
            android:hint="@string/pincode"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="6"
            android:paddingEnd="@dimen/dimen_12dp"
            android:paddingRight="@dimen/dimen_12dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorPrimary"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintLeft_toLeftOf="@id/edit_Address"
            app:layout_constraintRight_toRightOf="@id/edit_Address"
            app:layout_constraintTop_toBottomOf="@id/edit_Address"
            />

        <EditText
            android:id="@+id/edit_Password"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:backgroundTint="@color/colorAccent"
            android:drawablePadding="@dimen/dimen_5dp"
            android:hint="@string/tec_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:paddingEnd="@dimen/dimen_12dp"
            android:paddingRight="@dimen/dimen_12dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorPrimary"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintLeft_toLeftOf="@id/edit_Pincode"
            app:layout_constraintRight_toRightOf="@id/edit_Pincode"
            app:layout_constraintTop_toBottomOf="@id/edit_Pincode"
            />

        <EditText
            android:id="@+id/edit_Confirm_Password"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:backgroundTint="@color/colorAccent"
            android:drawablePadding="@dimen/dimen_5dp"
            android:hint="@string/tec_confirm_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingEnd="@dimen/dimen_12dp"
            android:paddingRight="@dimen/dimen_12dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorPrimary"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintLeft_toLeftOf="@id/edit_Password"
            app:layout_constraintRight_toRightOf="@id/edit_Password"
            app:layout_constraintTop_toBottomOf="@id/edit_Password"/>


        <Button
            android:id="@+id/bt_Submit"
            android:layout_width="0dp"
            android:layout_height="35dip"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginBottom="@dimen/dimen_15dp"
            android:background="@drawable/bt_shape"
            android:text="Submit"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@id/edit_Confirm_Password"
            app:layout_constraintRight_toRightOf="@id/edit_Confirm_Password"
            app:layout_constraintTop_toBottomOf="@id/edit_Confirm_Password"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>