<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    tools:context=".Activites.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_10dp"
        android:layout_marginStart="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars"/>


    <TextView
        android:id="@+id/tv_LoginHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Log in"
        android:paddingStart="@dimen/dimen_10dp"
        android:paddingLeft="@dimen/dimen_10dp"
        android:paddingRight="@dimen/dimen_10dp"
        android:paddingBottom="@dimen/dimen_10dp"
        android:textSize="30sp"
        android:textColor="@color/colorAccent"
        android:layout_marginBottom="50dp"
        app:layout_constraintLeft_toLeftOf="@id/editText"
        app:layout_constraintBottom_toTopOf="@id/editText"
        android:gravity="left"
        />





    <EditText
        android:id="@+id/editText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:hint="@string/tec_phonenumber"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:maxLength="10"
        android:paddingStart="@dimen/dimen_8dp"
        android:paddingEnd="@dimen/dimen_8dp"
        android:paddingRight="@dimen/dimen_8dp"
        android:layout_marginLeft="@dimen/dimen_5dp"
        android:layout_marginStart="@dimen/dimen_5dp"
        android:layout_marginRight="@dimen/dimen_5dp"
       android:layout_marginEnd="@dimen/dimen_5dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorPrimary"
        android:textSize="@dimen/dimen_16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorAccent"
        android:drawablePadding="@dimen/dimen_5dp"
        android:ems="10"
        android:hint="@string/tec_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:paddingStart="@dimen/dimen_8dp"
        android:paddingLeft="@dimen/dimen_8dp"
        android:paddingRight="@dimen/dimen_8dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@id/editText"
        app:layout_constraintTop_toBottomOf="@id/editText"
        android:textSize="@dimen/dimen_16sp"
        />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="295dip"
        android:layout_height="@dimen/dimen_35dp"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:background="@drawable/bt_shape"
        android:text="Submit"
        android:layout_marginStart="@dimen/dimen_10dp"
        android:layout_marginLeft="@dimen/dimen_10dp"
        android:layout_marginEnd="@dimen/dimen_10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
        android:textColor="@android:color/white"
        android:textSize="@dimen/dimen_16sp"
        app:layout_constraintLeft_toLeftOf="@id/editText2"
        app:layout_constraintRight_toRightOf="@id/editText2"
        app:layout_constraintTop_toBottomOf="@id/editText2"
        />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Keep me signed"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/dimen_16sp"
        app:layout_constraintStart_toStartOf="@id/bt_login"
        app:layout_constraintTop_toBottomOf="@id/bt_login"
        />

    <TextView
        android:id="@+id/tv_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/signup_heading"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/checkBox"
        app:layout_constraintLeft_toLeftOf="@id/checkBox"
        app:layout_constraintTop_toBottomOf="@id/checkBox"
        app:layout_constraintBottom_toBottomOf="parent"

        />
    <TextView
        android:id="@+id/tv_forgotPassowrd"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:padding="10dp"
        android:text="@string/tec_login_forgot_password"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/bt_login"
        app:layout_constraintRight_toRightOf="@id/bt_login"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_signUp"

        />



</androidx.constraintlayout.widget.ConstraintLayout>